[package]
name = "Drone"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = "symbols"
panic = "abort"
opt-level = "z"
lto = true

[dependencies]
ollama-rs = { version = "0.2.2", features = ["stream", "function-calling", "chat-history", "default"] }
tokio = "1.41.1"
serde_json = "1.0.133"
async-trait = "0.1.83"
clap = { version = "4.5.23", features = ["derive"] }
# openssl = { version = "0.10.68", features = ["vendored"] } # Enable this for i686-unknown-linux target